--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -22,7 +22,8 @@
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "expo": "^51.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
