--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,7 +9,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"test": "vitest"
 	},
 	"devDependencies": {
 		"@skeletonlabs/skeleton": "2.10.2",
@@ -20,6 +21,8 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@tailwindcss/forms": "0.5.9",
 		"@tailwindcss/typography": "0.5.15",
+		"@testing-library/jest-dom": "^6.5.0",
+		"@testing-library/svelte": "^5.2.3",
 		"@types/eslint": "^9.6.0",
 		"@types/node": "22.5.5",
 		"autoprefixer": "10.4.20",
@@ -27,6 +30,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
+		"jsdom": "^25.0.1",
 		"postcss": "8.4.47",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
@@ -36,7 +40,8 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3",
-		"vite-plugin-tailwind-purgecss": "0.3.3"
+		"vite-plugin-tailwind-purgecss": "0.3.3",
+		"vitest": "^2.1.2"
 	},
 	"type": "module",
 	"dependencies": {
