feat(mobile): oauth google setup and layout handling

--- a/apps/mobileExpo/ios/mobileExpo/Info.plist
+++ b/apps/mobileExpo/ios/mobileExpo/Info.plist
@@ -27,7 +27,7 @@
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
-          <string>myapp</string>
+          <string>area</string>
           <string>com.jbazan.mobileExpo</string>
         </array>
       </dict>
