--- a/apps/mobileExpo/package.json
+++ b/apps/mobileExpo/package.json
@@ -19,10 +19,13 @@
     "@react-navigation/native": "^6.0.2",
     "eslint": "^9.11.1",
     "expo": "~51.0.28",
+    "expo-application": "~5.9.1",
+    "expo-auth-session": "~5.5.2",
     "expo-dev-client": "~4.0.27",
     "expo-font": "~12.0.9",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
+    "expo-random": "~14.0.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
