--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -22,19 +22,20 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "amqplib": "^0.10.4",
-    "dotenv": "^16.4.5",
     "acorn": "^8.12.1",
     "acorn-walk": "^8.3.4",
+    "amqplib": "^0.10.4",
     "arg": "^4.1.3",
     "create-require": "^1.1.1",
     "diff": "^4.0.2",
+    "dotenv": "^16.4.5",
+    "googleapis": "^144.0.0",
     "make-error": "^1.3.6",
     "nodemailer": "^6.9.15",
+    "tsconfig-paths": "^4.2.0",
     "undici-types": "^6.19.8",
     "v8-compile-cache-lib": "^3.0.1",
-    "yn": "^3.1.1",
-    "tsconfig-paths": "^4.2.0"
+    "yn": "^3.1.1"
   },
   "ts-node": {
     "require": [
