--- a/apps/shared/package.json
+++ b/apps/shared/package.json
@@ -21,7 +21,8 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "mongodb": "^6.9.0",
-    "mongoose": "^8.7.0"
+    "mongoose": "^8.7.0",
+    "googleapis": "^144.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.21.0",
