--- a/devutils/package.json
+++ b/devutils/package.json
@@ -3,11 +3,16 @@
   "version": "1.0.0",
   "scripts": {
     "json-to-mongodb": "node src/json-to-mongodb.js",
+    "update_readme": "node src/update_readme.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "axios": "^1.7.7",
+    "widdershins": "^4.0.1"
+  }
 }
