--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/amqplib": "^0.10.5",
     "@types/node": "^22.7.2",
+    "@types/nodemailer": "^6.4.16",
     "mongodb": "^6.9.0",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
