fix(AREA-123): fixed worker and task-manager not working in production envirnoment, and added small life-saving functions.

--- a/apps/shared/package.json
+++ b/apps/shared/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "scripts": {
     "lib:build": "tsc --build",
+    "lib:watch": "tsc --build --watch",
     "lib:clean": "rimraf ./dist",
     "lib:lint": "eslint \"src/**/*.ts\" --fix"
   },
