--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -29,6 +29,7 @@
     "arg": "^4.1.3",
     "create-require": "^1.1.1",
     "diff": "^4.0.2",
+    "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
     "googleapis": "^144.0.0",
     "make-error": "^1.3.6",
