--- a/.github/workflows/prettify_code.yml
+++ b/.github/workflows/prettify_code.yml
@@ -18,4 +18,5 @@ jobs:
         uses: creyD/prettier_action@v4.3
         with:
           prettier_options: --write .
+          prettier_plugins: [ "prettier-plugin-svelte" ]
           only_changed: True
