--- a/.github/workflows/prettify_code.yml
+++ b/.github/workflows/prettify_code.yml
@@ -7,12 +7,15 @@ on:
       - main
 
 jobs:
-  prettier:
+  run_prettier:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Disable lock creation
+        run: npm config set package-lock false
 
       - name: Download Svelte Prettier Plugin
         run: npm i --save-dev prettier-plugin-svelte
