fix(PrettifyCode): swapped to npm i (same thing)

--- a/.github/workflows/prettify_code.yml
+++ b/.github/workflows/prettify_code.yml
@@ -18,7 +18,7 @@ jobs:
         run: npm config set package-lock false
 
       - name: Download Svelte Prettier Plugin
-        run: npm i --save-dev prettier-plugin-svelte
+        run: npm i prettier-plugin-svelte
 
       - name: Prettify code
         uses: creyD/prettier_action@v4.3
