--- a/.github/workflows/push_to_mirror.yml
+++ b/.github/workflows/push_to_mirror.yml
@@ -9,20 +9,16 @@ jobs:
   build:
     name: Test compilations
     runs-on: self-hosted
+    container: epitechcontent/epitest-docker:latest
 
     steps:
-        - name: Checkout Repository
-          uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-        - name: Set up Docker
-          uses: docker/setup-buildx-action@v2
-
-        - name: Build Docker Compose
-          run: docker-compose up --build --exit-code-from server
-
-        - name: Stop Docker Compose
-          if: always()
-          run: docker-compose down
+      - name: Compilation
+        timeout-minutes: 2
+        run: |
+          echo "Compilation"
 
   test:
     name: Run tests
