--- a/apps/mobileExpo/app.json
+++ b/apps/mobileExpo/app.json
@@ -5,7 +5,7 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "area",
+    "scheme": "com.jbazan.mobileexpo",
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/images/splash.png",
@@ -21,7 +21,7 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.jbazan.mobileExpo"
+      "package": "com.jbazan.mobileexpo"
     },
     "web": {
       "bundler": "metro",
