--- a/.github/workflows/push_to_mirror.yml
+++ b/.github/workflows/push_to_mirror.yml
@@ -99,29 +99,29 @@ jobs:
 
       - name: generate mobileExpo .env
         run: |
-            echo "EXPO_USERNAME=" >> ./apps/mobileExpo/.env
-            echo "EXPO_PASSWORD=" >> ./apps/mobileExpo/.env
-            echo "EXPO_PUBLIC_API_URL=" >> ./apps/mobileExpo/.env
-            echo "EXPO_PUBLIC_GOOGLE_CLIENT_ID=" >> ./apps/mobileExpo/.env
+          echo "EXPO_USERNAME=" >> ./apps/mobileExpo/.env
+          echo "EXPO_PASSWORD=" >> ./apps/mobileExpo/.env
+          echo "EXPO_PUBLIC_API_URL=" >> ./apps/mobileExpo/.env
+          echo "EXPO_PUBLIC_GOOGLE_CLIENT_ID=" >> ./apps/mobileExpo/.env
 
       - name: setup Docker
         uses: docker/setup-buildx-action@v2
 
       - name: build and start Docker Compose without client_mobile
         run: |
-          docker-compose up --build -d
+          docker compose up --build -d
 
       - name: Wait for containers to finish and check for errors
         run: |
           # Wait for logs to ensure all services are up
-          docker-compose logs
+          docker compose logs
 
           # Check exit codes of specific containers
           SERVICES=("client_mobile" "client_web" "server" "worker" "manager" "queue")  # Replace with your actual service names
           ERROR=0
 
           for SERVICE in "${SERVICES[@]}"; do
-            EXIT_CODE=$(docker inspect --format='{{.State.ExitCode}}' $(docker-compose ps -q "$SERVICE") || echo "1")
+            EXIT_CODE=$(docker inspect --format='{{.State.ExitCode}}' $(docker compose ps -q "$SERVICE") || echo "1")
             if [ "$EXIT_CODE" -ne 0 ]; then
               echo "$SERVICE exited with code $EXIT_CODE. Exiting..."
               ERROR=1
@@ -130,28 +130,13 @@ jobs:
 
           # Exit if any service failed
           if [ "$ERROR" -ne 0 ]; then
-            docker-compose down
+            docker compose down
             exit 1
           fi
 
       - name: Tear down Docker
         if: always()
-        run: docker-compose down
-
-
-#  test:
-#    name: Run tests
-#    runs-on: self-hosted
-#    container: epitechcontent/epitest-docker:latest
-#
-#    steps:
-#      - name: Checkout repository
-#        uses: actions/checkout@v4
-#
-#      - name: Run tests
-#        timeout-minutes: 2
-#        run: |
-#          # make tests_run
+        run: docker compose down
 
   push_to_mirror:
     name: Push to mirror
