--- a/apps/mobileExpo/package.json
+++ b/apps/mobileExpo/package.json
@@ -11,7 +11,11 @@
     "format": "prettier --write app/"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "setupFiles": ["./jest.setup.js"],
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ]
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
@@ -32,6 +36,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "jest-expo": "~51.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
@@ -43,10 +48,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.7.2",
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.73.0",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "jest-fetch-mock": "^3.0.3",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
