feat(AREA-145): add github oauth

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -12,3 +12,9 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_CALLBACK_URL=
 GOOGLE_REDIRECT_URL=
+JIRA_CLIENT_ID=
+JIRA_CLIENT_SECRET=
+JIRA_CALLBACK_URL=
+JIRA_REDIRECT_URL=
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
