feat(api): add queue module

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -8,7 +8,13 @@ MONGODB_PASSWORD=
 MONGODB_AUTH_SOURCE=
 MONGODB_DB_NAME=
 MONGODB_TLS_CA_FILE=
+
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_CALLBACK_URL=
 GOOGLE_REDIRECT_URL=
+
+RMQ_WHREA_QUEUE=
+RMQ_USER=
+RMQ_PASS=
+RMQ_HOST=
