fix(api & frontend): jira = atlassian

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -3,7 +3,7 @@ SECRET_SESSION=
 
 MONGODB_HOST=
 MONGODB_PORT=
-MONGODB_USERa=
+MONGODB_USER=
 MONGODB_PASSWORD=
 MONGODB_AUTH_SOURCE=
 MONGODB_DB_NAME=
@@ -12,9 +12,9 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_CALLBACK_URL=
 GOOGLE_REDIRECT_URL=
-JIRA_CLIENT_ID=
-JIRA_CLIENT_SECRET=
-JIRA_CALLBACK_URL=
-JIRA_REDIRECT_URL=
+ATLASSIAN_CLIENT_ID=
+ATLASSIAN_CLIENT_SECRET=
+ATLASSIAN_CALLBACK_URL=
+ATLASSIAN_REDIRECT_URL=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
