--- a/apps/frontend/prodConfig/ingress.yml
+++ b/apps/frontend/prodConfig/ingress.yml
@@ -1,22 +1,14 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
 metadata:
-  name: web-ingress
-  annotations:
-    # This tells Google Cloud to create an External Load Balancer to realize this Ingress
-    kubernetes.io/spec.ingressClassName: gce
-    # This enables HTTP connections from Internet clients
-    kubernetes.io/ingress.allow-http: 'true'
-    # This tells Google Cloud to associate the External Load Balancer with the static IP which we created earlier
-    kubernetes.io/ingress.global-static-ip-name: web-ip
-
-    cert-manager.io/issuer: letsencrypt-staging
+  name: frontend-route
+  namespace: frontend
 spec:
-  tls:
-    - hosts:
-        - area.oden-app.com
-  defaultBackend:
-    service:
-      name: web
-      port:
-        number: 8082
+  entryPoints:
+    - web
+  routes:
+    - match: Host(`area.oden-app.com`) || PathPrefix(`/`)
+      kind: Rule
+      services:
+        - name: frontend-service
+          port: 80
