--- a/apps/frontend/prodConfig/sveltekit-service.yml
+++ b/apps/frontend/prodConfig/sveltekit-service.yml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sveltekit-service
+  name: frontend-service
+  namespace: frontend
 spec:
-  type: LoadBalancer
   selector:
-    app: sveltekit
+    app: frontend
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 8081
+      targetPort: 3000
+  type: ClusterIP
