feat(ServicesService): update services db from local json

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -5,6 +5,7 @@
     "baseUrl": "./",
     "outDir": "./dist",
     "types": ["node", "jest"],
+    "resolveJsonModule": true,
   },
 
   "include": [
