refactor(env): renamed vars

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -14,7 +14,7 @@ GOOGLE_CLIENT_SECRET=
 GOOGLE_CALLBACK_URL=
 GOOGLE_REDIRECT_URL=
 
-RMQ_WHREA_QUEUE=
+RMQ_WREA_QUEUE=
 RMQ_USER=
 RMQ_PASS=
 RMQ_HOST=
