--- a/apps/worker/.env.example
+++ b/apps/worker/.env.example
@@ -1,3 +1,6 @@
+MAIL_SERVICE_SENDER_HOST=
+MAIL_SERVICE_SENDER_USER=
+MAIL_SERVICE_SENDER_PASSWORD=
 MONGODB_HOST=
 MONGODB_PORT=
 MONGODB_USER=
@@ -9,3 +12,9 @@ RMQ_USER=
 RMQ_PASS=
 RMQ_HOST=
 RMQ_QUEUE=
+ATLASSIAN_CLIENT_ID=
+ATLASSIAN_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK_URL=
+GOOGLE_REDIRECT_URL=
