--- a/apps/shared/package.json
+++ b/apps/shared/package.json
@@ -18,12 +18,13 @@
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/swagger": "^7.4.2",
     "amqplib": "^0.10.4",
+    "axios": "^1.7.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "googleapis": "^144.0.0",
     "mongodb": "^6.9.0",
-    "mongoose": "^8.7.0",
-    "googleapis": "^144.0.0"
+    "mongoose": "^8.7.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.21.0",
