--- a/apps/shared/package.json
+++ b/apps/shared/package.json
@@ -24,11 +24,13 @@
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
     "axios": "^1.7.7",
+    "nodemailer": "^6.9.15",
     "googleapis": "^144.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
+    "@types/nodemailer": "^6.4.16",
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
