feat(root): add script to prettify code

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   ],
   "scripts": {
     "install": "npm run libs:build",
+    "pretty": "npx prettier . --write",
     "libs:build": "tsc -b apps/shared",
     "libs:watch": "tsc -b apps/shared --watch",
     "libs:clean": "npm run lib:clean --workspaces --if-present",
@@ -23,11 +24,9 @@
     "api:start": "npm run start -w @area/api",
     "api:dev": "npm run start:dev -w @area/api",
     "api:test": "npm run test -w @area/api",
-    "api:format": "npm run format -w @area/api",
     "front:build": "npm run build -w @area/frontend",
     "front:start": "PORT=8081 node apps/frontend/build",
     "front:dev": "npm run dev -w @area/frontend",
-    "front:format": "npm run format -w @area/frontend",
     "front:test": "npm run test -w @area/frontend",
     "task-manager:start": "npm run start -w @area/manager",
     "worker:start": "npm run start -w @area/worker",
