fix(prettify_code): using fix found of github

--- a/.github/workflows/prettify_code.yml
+++ b/.github/workflows/prettify_code.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref }}
+          fetch-depth: 0
 
       - name: Hide package.json
         run: mv package.json package.json.bkp
@@ -27,4 +30,5 @@ jobs:
         uses: creyD/prettier_action@v4.3
         with:
           prettier_options: --write .
+          same_commit: true
           prettier_plugins: prettier-plugin-svelte
