--- a/apps/shared/package.json
+++ b/apps/shared/package.json
@@ -18,19 +18,19 @@
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/swagger": "^7.4.2",
     "amqplib": "^0.10.4",
+    "axios": "^1.7.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "googleapis": "^144.0.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
-    "axios": "^1.7.7",
-    "nodemailer": "^6.9.15",
-    "googleapis": "^144.0.0"
+    "nodemailer": "^6.9.15"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.16",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
-    "@types/nodemailer": "^6.4.16",
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
