feat(AREA-151): add oauth spotify

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -18,3 +18,5 @@ ATLASSIAN_CALLBACK_URL=
 ATLASSIAN_REDIRECT_URL=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
