--- a/.github/workflows/prettify_code.yml
+++ b/.github/workflows/prettify_code.yml
@@ -30,3 +30,4 @@ jobs:
         with:
           prettier_options: --write .
           prettier_plugins: prettier-plugin-svelte
+          only_changed: true
