feat(AREA-118): simple webhook handling (#88)

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -8,13 +8,21 @@ MONGODB_PASSWORD=
 MONGODB_AUTH_SOURCE=
 MONGODB_DB_NAME=
 MONGODB_TLS_CA_FILE=
+
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_CALLBACK_URL=
 GOOGLE_REDIRECT_URL=
+
 ATLASSIAN_CLIENT_ID=
 ATLASSIAN_CLIENT_SECRET=
 ATLASSIAN_CALLBACK_URL=
 ATLASSIAN_REDIRECT_URL=
+
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
+
+RMQ_WREA_QUEUE=
+RMQ_USER=
+RMQ_PASS=
+RMQ_HOST=
