--- a/apps/worker/.env.example
+++ b/apps/worker/.env.example
@@ -1,6 +1,7 @@
 MAIL_SERVICE_SENDER_HOST=
 MAIL_SERVICE_SENDER_USER=
 MAIL_SERVICE_SENDER_PASSWORD=
+
 MONGODB_HOST=
 MONGODB_PORT=
 MONGODB_USER=
@@ -8,12 +9,16 @@ MONGODB_PASSWORD=
 MONGODB_AUTH_SOURCE=
 MONGODB_DB_NAME=
 MONGODB_TLS_CA_FILE=
+
 RMQ_USER=
 RMQ_PASS=
 RMQ_HOST=
-RMQ_QUEUE=
+RMQ_AREA_QUEUE=
+RMQ_WREA_QUEUE=
+
 ATLASSIAN_CLIENT_ID=
 ATLASSIAN_CLIENT_SECRET=
+
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_CALLBACK_URL=
