feat(AREA-151): add oauth for spotify (#111)
Co-authored-by: Theo Lemaire <theolemaire@MacBook-Air-de-Theo.local>

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -22,6 +22,9 @@ ATLASSIAN_REDIRECT_URL=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
+
 RMQ_WREA_QUEUE=
 RMQ_USER=
 RMQ_PASS=
